Revise userRouter authentication, fix overlapping footer

--- a/public/css/global_style.css
+++ b/public/css/global_style.css
@@ -191,7 +191,10 @@ form label {
   font-size: 25px;
 }
 footer {
+  height: 100%;
+  display: block;
   font-weight: 100;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 footer a {
