--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,7 +25,7 @@
   padding: 30px;
 }
 #sign_up_section {
-  height: 30vh;
+  height: 100%;
 }
 .intro_text {
   font-size: 32px;
@@ -36,7 +36,7 @@
 #sign_up_wrap {
   margin: 1vh auto;
   width: 90%;
-  height: 92%;
+
   border: 2px solid transparent;
   border-image: linear-gradient(to right, #7fe8bc 0%, #5d398f 100%);
   border-image-slice: 2;
@@ -111,6 +111,10 @@
   .greeting {
     font-size: 20px;
   }
+  .bar8 {
+    margin-top: 100vh;
+    z-index: 2000;
+  }
 }
 
 /* Mobile */
@@ -139,5 +143,10 @@
   }
   #sign_up_form {
     padding: 10px;
+  }
+  #sign_up_title {
+    width: 90%;
+    margin: 5%;
+    margin-bottom: 30px;
   }
 }
